test/tests/errors/error-record-cannot-var.sm
// true
// false
/**/
/**/

program {
    record person(name, age);
    var x = person;
}